@@ -4,12 +4,10 @@
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
             <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/LocaleDyn.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/LooseDyn.java</file>
             <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/cfg/parameters.json</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Locale.java</file>
             <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/SlaveAgent.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Tight.java</file>
-            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/FunctionCall.java</file>
+            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/Loose.java</file>
+            <file>file:/home/gepr/corp/td/ucsf/dev/tut/tut/src/tut/model/LooseDyn.java</file>
         </group>
     </open-files>
 </project-private>
