@@ -1,3 +1,7 @@
+2015-07-01  gepr  <gepr@tempusdictum.com>
+
+	* parameters.json (drugPotency): New parameter used to calculate Symptom as function of Drug.
+
 2015-06-29  gepr  <gepr@tempusdictum.com>
 
 	* parameters.json(mp2mpo, detectorSites, P_occupySite, P_releaseMPO):  New parameters to specify the MP->MPO->Symptom mechanism.
